zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_tiled_empty_layout_closes_all.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (0)
