zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_tiled_focus_on_new_pane.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=100, rows=50
DISPLAY: cols=100, rows=50
FOCUS: Some(Terminal(1))

TILED PANES (3)
  Terminal(1):
    geom: x=0, y=0, cols=100, rows=16
    logical_position: 0
    run: None
    selectable: true
    title: Pane #1
    borderless: false

  Terminal(2):
    geom: x=0, y=16, cols=100, rows=16
    logical_position: 1
    run: None
    selectable: true
    title: Pane #2
    borderless: false

  Terminal(3):
    geom: x=0, y=32, cols=100, rows=18
    logical_position: 2
    run: None
    selectable: true
    title: Pane #3
    borderless: false
