zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_tiled_mixed_some_matches_some_new.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (3)
  Terminal(1):
    geom: x=0, y=0, cols=120, rows=13
    logical_position: 0
    run: Command(htop)
    selectable: true
    title: htop
    borderless: false

  Terminal(2):
    geom: x=0, y=26, cols=120, rows=14
    logical_position: 2
    run: None
    selectable: true
    title: Pane #2
    borderless: false

  Terminal(3):
    geom: x=0, y=13, cols=120, rows=13
    logical_position: 1
    run: Command(vim)
    selectable: true
    title: vim
    borderless: false
