zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_tiled_new_panes_for_unmatched_positions.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=150, rows=50
DISPLAY: cols=150, rows=50
FOCUS: None

TILED PANES (4)
  Terminal(1):
    geom: x=0, y=0, cols=150, rows=12
    logical_position: 0
    run: Command(htop)
    selectable: true
    title: htop
    borderless: false

  Terminal(2):
    geom: x=0, y=12, cols=150, rows=12
    logical_position: 1
    run: Command(vim)
    selectable: true
    title: vim
    borderless: false

  Terminal(3):
    geom: x=0, y=24, cols=150, rows=12
    logical_position: 2
    run: None
    selectable: true
    title: Pane #3
    borderless: false

  Terminal(4):
    geom: x=0, y=36, cols=150, rows=14
    logical_position: 3
    run: None
    selectable: true
    title: Pane #4
    borderless: false
