zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__override_tiled_retain_terminal_panes_no_matches.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (6)
  Terminal(1):
    geom: x=60, y=26, cols=60, rows=14
    logical_position: 2
    run: Command(htop)
    selectable: true
    title: htop
    borderless: false

  Terminal(2):
    geom: x=60, y=0, cols=60, rows=13
    logical_position: 3
    run: Command(vim)
    selectable: true
    title: vim
    borderless: false

  Terminal(3):
    geom: x=60, y=13, cols=60, rows=13
    logical_position: 4
    run: Command(tail) args=["-f", "/var/log/syslog"]
    selectable: true
    title: tail -f /var/log/syslog
    borderless: false

  Terminal(4):
    geom: x=0, y=0, cols=60, rows=13
    logical_position: 0
    run: Command(cargo)
    selectable: true
    title: cargo
    borderless: false

  Terminal(5):
    geom: x=0, y=13, cols=60, rows=13
    logical_position: 1
    run: Command(npm)
    selectable: true
    title: npm
    borderless: false

  Terminal(6):
    geom: x=0, y=26, cols=60, rows=14
    logical_position: 2
    run: Command(python)
    selectable: true
    title: python
    borderless: false
