zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__reapply_layout_exact_match.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: snapshot
---
VIEWPORT: x=0, y=0, cols=120, rows=40
DISPLAY: cols=120, rows=40
FOCUS: None

TILED PANES (5)
  Terminal(1):
    geom: x=0, y=24, cols=120, rows=8
    logical_position: 3
    run: Command(htop)
    selectable: true
    title: htop
    borderless: false

  Terminal(2):
    geom: x=0, y=32, cols=120, rows=8
    logical_position: 4
    run: Command(vim)
    selectable: true
    title: vim
    borderless: false

  Terminal(3):
    geom: x=0, y=0, cols=120, rows=8
    logical_position: 0
    run: None
    selectable: true
    title: Pane #3
    borderless: false

  Terminal(4):
    geom: x=0, y=8, cols=120, rows=8
    logical_position: 1
    run: None
    selectable: true
    title: Pane #4
    borderless: false

  Terminal(5):
    geom: x=0, y=16, cols=120, rows=8
    logical_position: 2
    run: None
    selectable: true
    title: Pane #5
    borderless: false
